# scrapion

./: .gitignore  CONCEPT.md  INSTALL.md  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.py
scrapion/: __init__.py  _browser_check.py  cli.py  input_handler.py  list_manager.py  orchestrator.py  report_generator.py  search_engine.py  web_access.py
